<resources>
    <string name="app_name">E-Library Manager</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Str_btn_admin_home">Admin panel</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_bookManagement">Book Management</string>

    <string name="add_book_MainTitle">Add New Book</string>
    <string name="add_book_id">Book ID</string>
    <string name="add_book_title">Book Title</string>
    <string name="add_book_author">Book Author</string>
    <string name="add_book_price">Book Price</string>
    <string name="add_book_submit">Submit</string>
    <string name="add_book_reset">Reset</string>


    <string name="add_book_id_hint">Enter Book ID</string>
    <string name="add_book_title_hint">Enter Book Title</string>
    <string name="add_book_author_hint">Enter Book Author</string>
    <string name="add_book_price_hint">Enter Book Retail Price</string>

    <string name="update_book_MainTitle">Update Book Details</string>
    <string name="update_book_submit">Update</string>
    <string name="title_activity_user__main">User_Main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_user_panel">User Panel</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="total_0_00">Total = 0.00</string>
    <string name="place_order">Place Order</string>

</resources>