<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#fff"
    app:contentPadding="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_book_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/add_book_id"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/view_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/add_book_title"
            />
        <TextView
            android:id="@+id/view_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:text="@string/add_book_author"
            />

        <TextView
            android:id="@+id/view_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:text="@string/add_book_price"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>